--- a/style.css
+++ b/style.css
@@ -58,6 +58,10 @@ span{
   font-weight: bold;
 }
 
+.strikethrough{
+  text-decoration: line-through;
+}
+
 @media (min-height: 800px) {
   .contactDiv{
     padding-bottom: 400px;
